--- a/goodbye.html
+++ b/goodbye.html
@@ -7,3 +7,4 @@
 </ul>
 
 <p> It's always hard to say goodbye so you should always say, see you later! </p>
+<p> We made another change, goodbye!</p>
